# obsbot-control-linux

./: .gitignore  CMakeLists.txt  LICENSE  PKGBUILD  README.md  build.sh  install.sh  local-install.sh  obsbot-control.desktop  obsbot-meet2-control.desktop  publish-aur.sh  uninstall.sh
.github/workflows/: release.yml
docs/: BUILD.md  CONTRIBUTING.md  RELEASE.md  RELEASE_NOTES.md  ROADMAP.md
docs/adr/: 000-template.md  001-application-architecture.md
resources/: resources.qrc
resources/scripts/: obsbot-virtual-camera-setup.sh
resources/systemd/: obsbot-virtual-camera.service
scripts/: package-appimage.sh
src/cli/: meet2_test.cpp
src/common/: Config.cpp  Config.h
src/gui/: CameraControlWindow.cpp  CameraControlWindow.h  CameraController.cpp  CameraController.h  CameraPreviewWidget.cpp  CameraPreviewWidget.h  CameraSettingsWidget.cpp  CameraSettingsWidget.h  FilterPreviewWidget.cpp  FilterPreviewWidget.h  MainWindow.cpp  MainWindow.h  PTZControlWidget.cpp  PTZControlWidget.h  PreviewWindow.cpp  PreviewWindow.h  TrackingControlWidget.cpp  TrackingControlWidget.h  VideoEffectsWidget.cpp  VideoEffectsWidget.h  VirtualCameraSetupDialog.cpp  VirtualCameraSetupDialog.h  VirtualCameraStreamer.cpp  VirtualCameraStreamer.h
